--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+blankon-sounds (6.0-1) ombilin; urgency=low
+
+  * # 431.
+  * add dh_gconf debian/wules
+  * add debian/blankon-sounds.gconf-defaults
+  
+ -- Rahman Yusri Aftian <aftian@di.blankon.in>  Sun, 02 May 2010 20:09:03 +0700
+
 blankon-sounds (4.0-2) meuligoe; urgency=low
 
   * Tambah sound theme belum ada menggunakan sound theme dari paket
