--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+blankon-sounds (6.0-2) pattimura; urgency=low
+
+  * Pattimura sound
+
+ -- Rahman Yusri Aftian <aftian@di.blankon.in>  Wed, 05 Jan 2011 22:30:05 +0700
+
 blankon-sounds (6.0-1) ombilin; urgency=low
 
   * # 431.
