--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+blankon-sounds (6.0-3) pattimura; urgency=low
+
+  * Update desktop-login create by kukuh syafaat.
+
+ -- Adnan Kashogi <adnan@linuz.web.id>  Fri, 15 Apr 2011 21:11:12 +0700
+
 blankon-sounds (6.0-2) pattimura; urgency=low
 
   * Pattimura sound
