ganti dektop=login

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+blankon-sounds (6.0-3.1) pattimura; urgency=low
+
+  * Update desktop-login lagi
+
+ -- Alfian Fahmi <bu0ncu3@yahoo.com>  Sun, 29 May 2011 23:44:39 +0700
+
 blankon-sounds (6.0-3) pattimura; urgency=low
 
   * Update desktop-login create by kukuh syafaat.
