--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+blankon-sounds (6.0-4) pattimura; urgency=low
+
+  * revisi sound
+
+ -- Alfian Fahmi <bu0ncu3@yahoo.com>  Mon, 30 May 2011 07:52:30 +0700
+
 blankon-sounds (6.0-3.1) pattimura; urgency=low
 
   * Update desktop-login lagi
