--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+blankon-sounds (6.0-5) pattimura; urgency=low
+
+  * penggantian desktop-login sound
+
+ -- Alfian Fahmi <bu0ncu3@yahoo.com>  Mon, 30 May 2011 14:13:49 +0700
+
 blankon-sounds (6.0-4) pattimura; urgency=low
 
   * revisi sound
