--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+blankon-sounds (6.0-6) pattimura; urgency=low
+
+  * Update desktop-login dari Kukuh Syafaat
+
+ -- Alfian Fahmi <bu0ncu3@yahoo.com>  Mon, 30 May 2011 14:50:04 +0700
+
 blankon-sounds (6.0-5) pattimura; urgency=low
 
   * penggantian desktop-login sound
