--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-blankon-sounds (8.0-1) pattimura; urgency=low
+blankon-sounds (8.0-1) rote; urgency=low
 
   * rebuild for rote.
   
- -- Rahman Yusri Aftian <aftian@di.blankon.in>  Sat, 05 Nov 2011 07:06:38 +0700
+ -- Rahman Yusri Aftian <aftian@di.blankon.in>  Sat, 05 Nov 2011 16:45:12 +0700
 
 blankon-sounds (6.0-6) pattimura; urgency=low
 
