--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+blankon-sounds (8.0-3) rote; urgency=low
+
+  * remove blankon-sound.gconf-defaults
+
+ -- Rahman Yusri Aftian <aftian@di.blankon.in>  Wed, 01 Aug 2012 01:54:39 +0700
+
 blankon-sounds (8.0-2) rote; urgency=low
 
   * Changes desktop-login
