--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+blankon-sounds (8.0-4) rote-updates; urgency=low
+
+  * Added blankon-desktop to depends
+
+ -- Rahman Yusri Aftian <aftian@di.blankon.in>  Sat, 08 Dec 2012 14:05:57 +0000
+
 blankon-sounds (8.0-3) rote; urgency=low
 
   * remove blankon-sound.gconf-defaults
