--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+blankon-sounds (10.0-1.1) uluwatu; urgency=medium
+
+  * Upload to uluwatu
+
+ -- Anto Samalona <ansamsoftdev@gmail.com>  Thu, 11 May 2017 21:16:41 +0800
+
 blankon-sounds (10.0-1) tambora; urgency=low
 
   * Upload to tambora
